# parafac2

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: test.yml
notes/: projection_svd_to_eigh.md
parafac2/: SECSI.py  __init__.py  jointdiag.py  normalize.py  parafac2.py  pf2_plsr.py  pls.py  utils.py
parafac2/tests/: test_SECSI.py  test_jointdiag.py  test_normalize.py  test_parafac2.py  test_pf2_plsr.py  test_pls.py
