[project]
name = "parafac2"
version = "0.2.0"
description = "An implementation of PARAFAC2 that handles sparsity for single cell data."
authors = [{name = "Aaron Meyer", email = "git@asmlab.org" }]
license = "MIT"
requires-python = ">= 3.12"

dependencies = [
    "numpy>=2.2",
    "scipy>=1.16",
    "tensorly>=0.8.1",
    "tqdm>=4.66",
    "cupy-cuda12x>=13.6",
    "anndata>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.1",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # NumPy-specific checks
    "NPY",
    # Unused arguments
    "ARG",
    # type checking
    "TC",
]
