[project]
name = "parafac2"
version = "1.2.0"
description = "An implementation of PARAFAC2 that handles sparsity for single cell data."
authors = [{name = "Aaron Meyer", email = "git@asmlab.org" }]
license = "MIT"
requires-python = ">= 3.13"

dependencies = [
    "numpy>=2.2",
    "scipy>=1.18",
    "tensorly>=0.8.1",
    "tqdm>=4.68",
    "cupy-cuda12x[ctk]>=14",
    "anndata>=0.12",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ty>=0.0.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # NumPy-specific checks
    "NPY",
    # Unused arguments
    "ARG",
    # type checking
    "TC",
]
